--- a/Universal Presenter Remote/Universal Presenter Remote/MainMenu.xib
+++ b/Universal Presenter Remote/Universal Presenter Remote/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11201" systemVersion="16A319" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11201"/>
@@ -669,7 +669,7 @@
                 </menuItem>
             </items>
         </menu>
-        <window title="Universal Presenter Remote" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" appearanceType="aqua" animationBehavior="default" id="BOK-1e-E66">
+        <window title="Universal Presenter Remote" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="BOK-1e-E66">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="700" height="400"/>
@@ -687,7 +687,7 @@
                         </constraints>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Logo" id="GSh-iH-kXv"/>
                     </imageView>
-                    <tabView initialItem="pOU-Vn-RrV" translatesAutoresizingMaskIntoConstraints="NO" id="hdp-ee-m7v">
+                    <tabView initialItem="NPI-sH-gCi" translatesAutoresizingMaskIntoConstraints="NO" id="hdp-ee-m7v">
                         <rect key="frame" x="13" y="10" width="674" height="256"/>
                         <font key="font" metaFont="system"/>
                         <tabViewItems>
@@ -769,12 +769,12 @@
                                 </view>
                             </tabViewItem>
                             <tabViewItem label="Instructions" identifier="1" id="pOU-Vn-RrV">
-                                <view key="view" misplaced="YES" id="UY7-Hy-dNl">
+                                <view key="view" id="UY7-Hy-dNl">
                                     <rect key="frame" x="10" y="33" width="654" height="210"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aU4-cF-Qq7">
-                                            <rect key="frame" x="-41" y="-23" width="3100" height="261"/>
+                                            <rect key="frame" x="-41" y="-23" width="698" height="261"/>
                                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="InstructionsBackground" id="cFQ-QG-0Wq"/>
                                         </imageView>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NdZ-KB-VRq">
@@ -790,7 +790,7 @@
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cGD-w4-GuN">
-                                            <rect key="frame" x="1492" y="136" width="73" height="91"/>
+                                            <rect key="frame" x="291" y="136" width="73" height="91"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="69" id="IrF-q5-d69"/>
                                             </constraints>
@@ -801,7 +801,7 @@
                                             </textFieldCell>
                                         </textField>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jUm-po-3aB">
-                                            <rect key="frame" x="2915" y="136" width="73" height="91"/>
+                                            <rect key="frame" x="513" y="136" width="73" height="91"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="69" id="xdu-w1-Fe5"/>
                                             </constraints>
@@ -820,7 +820,7 @@
                                             </textFieldCell>
                                         </textField>
                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iXv-Gt-pwz">
-                                            <rect key="frame" x="1441" y="45" width="174" height="83"/>
+                                            <rect key="frame" x="240" y="45" width="174" height="83"/>
                                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Enter the token provided by this app, the remote software, into the control software and click connect." id="a1t-W7-LPj">
                                                 <font key="font" metaFont="system"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -828,7 +828,7 @@
                                             </textFieldCell>
                                         </textField>
                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IsQ-Q6-aO2">
-                                            <rect key="frame" x="1672" y="5" width="1375" height="123"/>
+                                            <rect key="frame" x="471" y="5" width="174" height="123"/>
                                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" id="f0q-BR-gZA">
                                                 <font key="font" metaFont="system"/>
                                                 <string key="title">You can now open the presentation software of choice and begin presenting. Click the Next, Previous, and Media to control your presentation from anywhere in the world</string>
